Theme: Smaller buttons and spacing (label fix)

--- a/rtdata/themes/TooWaBlue-GTK3-20_.css
+++ b/rtdata/themes/TooWaBlue-GTK3-20_.css
@@ -163,7 +163,7 @@ undershoot {
 
 label {
     padding: 0.083333333333333333em 0;
-    margin: 0.125em;
+    margin: 0.125em 0.166666666666666666em;
     min-height: 1.333333333333333333em;
 }
 
